fixup test errors, rework comments
